--- a/storyteller_lib/templates/base/phrase_extraction.jinja2
+++ b/storyteller_lib/templates/base/phrase_extraction.jinja2
@@ -1,5 +1,5 @@
 {# Base template for phrase extraction - English version #}
-Analyze this scene excerpt and extract phrases that could become repetitive if overused:
+Analyze this complete scene and extract phrases that could become repetitive if overused:
 
 {{ content_sample }}
 
