--- a/storyteller_lib/templates/base/scene_structure_analysis.jinja2
+++ b/storyteller_lib/templates/base/scene_structure_analysis.jinja2
@@ -1,7 +1,7 @@
 {# Base template for scene structure analysis #}
-Analyze the structure of this scene:
+Analyze the structure of this complete scene:
 
-{{ scene_excerpt }}...
+{{ scene_excerpt }}
 
 Identify:
 1. How the scene opens (action, dialogue, description, or internal thought)
