--- a/storyteller_lib/templates/languages/german/phrase_extraction.jinja2
+++ b/storyteller_lib/templates/languages/german/phrase_extraction.jinja2
@@ -1,5 +1,5 @@
 {# German template for phrase extraction #}
-Analysiere diesen Szenenauszug und extrahiere Phrasen, die bei Übernutzung repetitiv werden könnten:
+Analysiere diese vollständige Szene und extrahiere Phrasen, die bei Übernutzung repetitiv werden könnten:
 
 {{ content_sample }}
 
