--- a/storyteller_lib/templates/languages/german/scene_structure_analysis.jinja2
+++ b/storyteller_lib/templates/languages/german/scene_structure_analysis.jinja2
@@ -1,7 +1,7 @@
 {# German template for scene structure analysis #}
-Analysiere die Struktur dieser Szene:
+Analysiere die Struktur dieser vollständigen Szene:
 
-{{ scene_excerpt }}...
+{{ scene_excerpt }}
 
 Identifiziere:
 1. Wie die Szene beginnt (Aktion, Dialog, Beschreibung oder innerer Gedanke)
