--- a/storyteller_lib/templates/languages/german/scene_writing_comprehensive.jinja2
+++ b/storyteller_lib/templates/languages/german/scene_writing_comprehensive.jinja2
@@ -119,7 +119,7 @@ Jüngste Szenentypen (Wiederholung vermeiden): {{ recent_scene_types[:3]|join(',
 
 ## STILRICHTLINIEN
 
-{{ style_guide }}
+{% include '_style_guide.jinja2' %}
 
 ## ANWEISUNGEN
 
