--- a/storyteller_lib/templates/base/synthesize_scene_instructions.jinja2
+++ b/storyteller_lib/templates/base/synthesize_scene_instructions.jinja2
@@ -54,6 +54,7 @@ ACTIVE STORY THREADS:
 CHARACTERS IN SCENE: {{ required_characters|join(', ') }}
 {% for char in characters[:4] %}
 - {{ char.name }}: {{ char.role }}, currently {{ char.emotional_state }}, motivated by {{ char.motivation }}
+{% if char.inner_conflicts %}  Inner conflict: {{ char.inner_conflicts[0].description if char.inner_conflicts else '' }}{% endif %}
 {% if char.recent_knowledge %}  Recently learned: {{ char.recent_knowledge[0].content }}{% endif %}
 {% endfor %}
 
