--- a/storyteller_lib/templates/languages/german/chapter_planning.jinja2
+++ b/storyteller_lib/templates/languages/german/chapter_planning.jinja2
@@ -18,7 +18,7 @@ Liefere für jedes Kapitel:
 1. Kapitelnummer und Titel
 2. Eine Zusammenfassung der wichtigsten Ereignisse (200-300 Wörter)
 3. Welche Figuren auftreten und wie sie sich entwickeln
-4. Für jede der 3-6 Schlüsselszenen, spezifiziere:
+4. WICHTIG: Erstelle 3-6 Schlüsselszenen pro Kapitel (NIEMALS weniger als 3, strebe 4-5 für gutes Tempo an). Für jede Szene, spezifiziere:
    - Kurze Beschreibung, was passiert
    - Szenentyp: Wähle aus (Aktion, Dialog, Erkundung, Enthüllung, Charaktermoment, Übergang, Konflikt, Auflösung)
    - Handlungsfortschritte: Welche wichtigen Handlungspunkte werden enthüllt/vorangetrieben
@@ -30,6 +30,13 @@ Liefere für jedes Kapitel:
    - Endet mit: Wie die Szene abschließt (Cliffhanger, Auflösung, sanfter_Übergang, harter_Bruch)
    - Verbindung zur nächsten: Wie diese Szene in die nächste führt
 5. Wichtige Enthüllungen oder Wendungen der Handlung
+
+KRITISCH: Sei sehr spezifisch bei Handlungsfortschritten. Anstatt generischer Beschreibungen wie "Figurenentwicklung", verwende spezifische Schlüssel wie:
+- "felix_erfährt_stift_fehlt" (nicht nur "Handlungseinführung")
+- "held_nimmt_quest_an" (nicht nur "Figurenentscheidung")
+- "mentor_enthüllt_geheimnis" (nicht nur "Enthüllung")
+
+Diese Spezifität verhindert Wiederholungen und stellt ordentlichen Geschichtsfortschritt sicher.
 
 Stelle sicher, dass die Kapitel logisch fließen und den Bogen der Heldenreise beibehalten.
 
